--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -1,17 +1,23 @@
 name: Get & Cache Dependencies
 # there is no 'on' in custom actions
 desctiption: Get the dependencies (via npm) and cache them
+inputs:
+  caching:
+    description: Whether to cache deps or not
+    required: false
+    default: 'true'
 runs:
   using: composite
   steps:
     - name: Cache dependencies
+      if: inputs.caching == 'true'
       id: cache
       uses: actions/cache@v4
       with:
         path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
+      if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
       run: npm ci
       # add a shell key!
       shell: bash
