--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Load and cache dependencies
         uses: ./.github/actions/cached-deps
+        with:
+          # that's our custom input named caching
+          caching: 'false'
       - name: Lint code
         run: npm run lint
   test:
