--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -6,6 +6,10 @@ inputs:
     description: Whether to cache deps or not
     required: false
     default: 'true'
+outputs:
+  used-cache:
+    description: Whether cache was used
+    value: ${{ steps.install.outputs.cache }}
 runs:
   using: composite
   steps:
@@ -17,7 +21,11 @@ runs:
         path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
+      # add id so it can be referenced
+      id: install
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
-      run: npm ci
+      run: |
+        npm ci
+        echo "cache='${{ inputs.caching }}'" >> $GITHUB_OUTPUT
       # add a shell key!
       shell: bash
