--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           # that's our custom input named caching
           caching: 'false'
       - name: Output information
-        run: echo "Cache used? ${{ steps.cache-deps.outpus.used-cache }}"
+        run: echo "Cache used? ${{ steps.cache-deps.outputs.used-cache }}"
       - name: Lint code
         run: npm run lint
   test:
